--- a/test.ipynb
+++ b/test.ipynb
@@ -1,15 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# read literature on consumer engagement\n",
-    "# conduct summary reviews of the publications or papers that seem most relevant to your purpose\n",
-    "# prepare a bibliography od citations\n",
-    "# Justify the citations"
+    "## Data analysis ##"
    ]
   },
   {
