--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -300,80 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Profile\n",
-      "Wild Adventures Theme Park                     955\n",
-      "Happy Hollow Park & Zoo                        627\n",
-      "Cedar Point                                    478\n",
-      "Walt Disney Studios (US)                       450\n",
-      "Playland                                       446\n",
-      "Walt Disney Animation Studios                  432\n",
-      "Fun Spot America                               414\n",
-      "Belmont Park                                   408\n",
-      "Knott's Berry Farm                             402\n",
-      "Six Flags Discovery Kingdom                    401\n",
-      "Busch Gardens Tampa Bay                        399\n",
-      "Kings Island                                   396\n",
-      "Busch Gardens Williamsburg                     396\n",
-      "SeaWorld Orlando                               395\n",
-      "SeaWorld San Diego                             388\n",
-      "Hersheypark                                    383\n",
-      "SkyPark at Santa's Village                     382\n",
-      "Six Flags Great Adventure                      368\n",
-      "Santa Cruz Beach Boardwalk                     351\n",
-      "Lake Compounce                                 342\n",
-      "Canada's Wonderland                            334\n",
-      "Sea Life Park                                  334\n",
-      "California's Great America                     332\n",
-      "Silverwood Theme Park                          318\n",
-      "Six Flags Great Escape and Hurricane Harbor    313\n",
-      "Sesame Place San Diego                         306\n",
-      "West Edmonton Mall                             305\n",
-      "Universal Orlando Resort (US)                  304\n",
-      "Six Flags                                      278\n",
-      "Gilroy Gardens                                 254\n",
-      "Disneyland Paris                               237\n",
-      "Waterville USA                                 223\n",
-      "Quassy Amusement & Waterpark                   213\n",
-      "Six Flags Over Georgia & Hurricane Harbor      200\n",
-      "Playland Park                                  200\n",
-      "Six Flags Darien Lake                          194\n",
-      "LEGOLAND California                            181\n",
-      "Six Flags Magic Mountain                       177\n",
-      "Six Flags Great America/Hurricane Harbor       152\n",
-      "Elitch Gardens                                 144\n",
-      "Disneyland                                     137\n",
-      "Walt Disney World                              133\n",
-      "Castles & Coasters                             133\n",
-      "Pacific Park                                   121\n",
-      "Enchanted Island Amusement Park                116\n",
-      "ACN - America's Coaster Network                114\n",
-      "Lake Winnie                                    106\n",
-      "MarineLand                                      92\n",
-      "Big Kahuna's NJ                                 92\n",
-      "Centreville Amusement Park                      80\n",
-      "SeaWorld                                        80\n",
-      "Hurricane Harbor Oklahoma City                  77\n",
-      "Calaway Park                                    76\n",
-      "Glenwood Caverns Adventure Park                 68\n",
-      "Universal Studios Hollywood                     67\n",
-      "Santa's Workshop North Pole, Colorado           58\n",
-      "Adventure City                                  30\n",
-      "Funland Rehoboth Beach                          28\n",
-      "Castles N Coasters                              23\n",
-      "Name: count, dtype: int64\n"
+     "ename": "NameError",
+     "evalue": "name 'merged_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9/Dataframes.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Counts of unique values for a specific column\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/owenalberts/Desktop/Master%20Digital%20Driven%20Business/Digital%20marketing%20strategy/DMSteam9/Dataframes.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m merged_df[\u001b[39m'\u001b[39m\u001b[39mProfile\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'merged_df' is not defined"
      ]
     }
    ],
    "source": [
     "# Counts of unique values for a specific column\n",
-    "print(merged_df['Profile'].value_counts())\n"
+    "merged_df['Profile'].value_counts()\n"
    ]
   },
   {
@@ -535,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
