--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -22,221 +22,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First few rows of Merged Themeparcs :\n"
+      "Hello World!\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Profile</th>\n",
-       "      <th>Message</th>\n",
-       "      <th>Number of Reactions</th>\n",
-       "      <th>Number of Shares</th>\n",
-       "      <th>Number of Comments (primary)</th>\n",
-       "      <th>Number of Shares.1</th>\n",
-       "      <th>Comments per post</th>\n",
-       "      <th>Comments on posts by fans</th>\n",
-       "      <th>Post interaction rate</th>\n",
-       "      <th>Engagement</th>\n",
-       "      <th>Number of Likes</th>\n",
-       "      <th>Link-posts</th>\n",
-       "      <th>Picture Posts</th>\n",
-       "      <th>Video-posts</th>\n",
-       "      <th>Profile-ID</th>\n",
-       "      <th>Post-ID</th>\n",
-       "      <th>Link</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12/31/23 9:40 PM</td>\n",
-       "      <td>Wild Adventures Theme Park</td>\n",
-       "      <td>🎟️🚨 Today's the FINAL day to use your 2023 Sea...</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1,09E+12</td>\n",
-       "      <td>1,09E+12</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84679583132</td>\n",
-       "      <td>84679583132_770120045161180</td>\n",
-       "      <td>https://www.facebook.com/617429960430190/posts...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12/31/23 8:01 PM</td>\n",
-       "      <td>Fun Spot America</td>\n",
-       "      <td>See you next year! 😉                Don’t miss...</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4,17E+11</td>\n",
-       "      <td>4,17E+11</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1,8402E+11</td>\n",
-       "      <td>184020466977_767286052104076</td>\n",
-       "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12/31/23 7:30 PM</td>\n",
-       "      <td>Fun Spot America</td>\n",
-       "      <td>Don't miss our HUGE firework display ! 🥳\\n\\n#f...</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2,85E+11</td>\n",
-       "      <td>2,85E+11</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1,8402E+11</td>\n",
-       "      <td>184020466977_767267948772553</td>\n",
-       "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12/31/23 7:00 PM</td>\n",
-       "      <td>Disneyland Paris</td>\n",
-       "      <td>Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉</td>\n",
-       "      <td>646.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>1,36E+11</td>\n",
-       "      <td>1,36E+11</td>\n",
-       "      <td>478.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6,52389E+14</td>\n",
-       "      <td>652389081615295_775974521237956</td>\n",
-       "      <td>https://www.facebook.com/724434559725286/posts...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12/31/23 7:00 PM</td>\n",
-       "      <td>Silverwood Theme Park</td>\n",
-       "      <td>It's the last day of our New Year's Sale! Save...</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4,96E+11</td>\n",
-       "      <td>4,96E+11</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7,62702E+14</td>\n",
-       "      <td>762701550509617_678920137770716</td>\n",
-       "      <td>https://www.facebook.com/562559642740100/posts...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Date                     Profile  \\\n",
-       "0  12/31/23 9:40 PM  Wild Adventures Theme Park   \n",
-       "1  12/31/23 8:01 PM            Fun Spot America   \n",
-       "2  12/31/23 7:30 PM            Fun Spot America   \n",
-       "3  12/31/23 7:00 PM            Disneyland Paris   \n",
-       "4  12/31/23 7:00 PM       Silverwood Theme Park   \n",
-       "\n",
-       "                                             Message  Number of Reactions  \\\n",
-       "0  🎟️🚨 Today's the FINAL day to use your 2023 Sea...                 16.0   \n",
-       "1  See you next year! 😉                Don’t miss...                 38.0   \n",
-       "2  Don't miss our HUGE firework display ! 🥳\\n\\n#f...                 23.0   \n",
-       "3     Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉                646.0   \n",
-       "4  It's the last day of our New Year's Sale! Save...                 17.0   \n",
-       "\n",
-       "   Number of Shares  Number of Comments (primary)  Number of Shares.1  \\\n",
-       "0               NaN                           2.0                 2.0   \n",
-       "1               NaN                           1.0                 2.0   \n",
-       "2               NaN                           2.0                 3.0   \n",
-       "3               NaN                          52.0                12.0   \n",
-       "4               NaN                           2.0                 0.0   \n",
-       "\n",
-       "   Comments per post  Comments on posts by fans Post interaction rate  \\\n",
-       "0                2.0                        2.0              1,09E+12   \n",
-       "1                1.0                        1.0              4,17E+11   \n",
-       "2                2.0                        2.0              2,85E+11   \n",
-       "3               56.0                       56.0              1,36E+11   \n",
-       "4                2.0                        2.0              4,96E+11   \n",
-       "\n",
-       "  Engagement  Number of Likes  Link-posts  Picture Posts  Video-posts  \\\n",
-       "0   1,09E+12             13.0         NaN            1.0          NaN   \n",
-       "1   4,17E+11             33.0         NaN            NaN          NaN   \n",
-       "2   2,85E+11             21.0         NaN            NaN          1.0   \n",
-       "3   1,36E+11            478.0         NaN            1.0          NaN   \n",
-       "4   4,96E+11             16.0         NaN            NaN          1.0   \n",
-       "\n",
-       "    Profile-ID                          Post-ID  \\\n",
-       "0  84679583132      84679583132_770120045161180   \n",
-       "1   1,8402E+11     184020466977_767286052104076   \n",
-       "2   1,8402E+11     184020466977_767267948772553   \n",
-       "3  6,52389E+14  652389081615295_775974521237956   \n",
-       "4  7,62702E+14  762701550509617_678920137770716   \n",
-       "\n",
-       "                                                Link  \n",
-       "0  https://www.facebook.com/617429960430190/posts...  \n",
-       "1  https://www.facebook.com/653224623510220/posts...  \n",
-       "2  https://www.facebook.com/653224623510220/posts...  \n",
-       "3  https://www.facebook.com/724434559725286/posts...  \n",
-       "4  https://www.facebook.com/562559642740100/posts...  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/Dataframes.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m base_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Explicitly load each CSV file into its own DataFrame\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m df1 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs I.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m df2 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs II.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m df3 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs III.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -258,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
