--- a/Dataframes.ipynb
+++ b/Dataframes.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,19 +39,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/sandervanduin/Desktop/HVA weekly /Digitial Marketing Strategy/DMSteam9/Dataframes.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m base_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/Users/owenalberts/Desktop/Master Digital Driven Business/Digital marketing strategy/DMSteam9\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Explicitly load each CSV file into its own DataFrame\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m df1 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs I.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m df2 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs II.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sandervanduin/Desktop/HVA%20weekly%20/Digitial%20Marketing%20Strategy/DMSteam9/Dataframes.ipynb#W2sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m df3 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(base_path, \u001b[39m'\u001b[39m\u001b[39mThemeparcs III.csv\u001b[39m\u001b[39m'\u001b[39m), on_bad_lines\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mskip\u001b[39m\u001b[39m'\u001b[39m, delimiter\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m;\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First few rows of Merged Themeparcs :\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Profile</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>Number of Reactions</th>\n",
+       "      <th>Number of Shares</th>\n",
+       "      <th>Number of Comments (primary)</th>\n",
+       "      <th>Number of Shares.1</th>\n",
+       "      <th>Comments per post</th>\n",
+       "      <th>Comments on posts by fans</th>\n",
+       "      <th>Post interaction rate</th>\n",
+       "      <th>Engagement</th>\n",
+       "      <th>Number of Likes</th>\n",
+       "      <th>Link-posts</th>\n",
+       "      <th>Picture Posts</th>\n",
+       "      <th>Video-posts</th>\n",
+       "      <th>Profile-ID</th>\n",
+       "      <th>Post-ID</th>\n",
+       "      <th>Link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12/31/23 9:40 PM</td>\n",
+       "      <td>Wild Adventures Theme Park</td>\n",
+       "      <td>🎟️🚨 Today's the FINAL day to use your 2023 Sea...</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1,09E+12</td>\n",
+       "      <td>1,09E+12</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84679583132</td>\n",
+       "      <td>84679583132_770120045161180</td>\n",
+       "      <td>https://www.facebook.com/617429960430190/posts...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12/31/23 8:01 PM</td>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>See you next year! 😉                Don’t miss...</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4,17E+11</td>\n",
+       "      <td>4,17E+11</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,8402E+11</td>\n",
+       "      <td>184020466977_767286052104076</td>\n",
+       "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12/31/23 7:30 PM</td>\n",
+       "      <td>Fun Spot America</td>\n",
+       "      <td>Don't miss our HUGE firework display ! 🥳\\n\\n#f...</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2,85E+11</td>\n",
+       "      <td>2,85E+11</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1,8402E+11</td>\n",
+       "      <td>184020466977_767267948772553</td>\n",
+       "      <td>https://www.facebook.com/653224623510220/posts...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12/31/23 7:00 PM</td>\n",
+       "      <td>Disneyland Paris</td>\n",
+       "      <td>Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>1,36E+11</td>\n",
+       "      <td>1,36E+11</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6,52389E+14</td>\n",
+       "      <td>652389081615295_775974521237956</td>\n",
+       "      <td>https://www.facebook.com/724434559725286/posts...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12/31/23 7:00 PM</td>\n",
+       "      <td>Silverwood Theme Park</td>\n",
+       "      <td>It's the last day of our New Year's Sale! Save...</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4,96E+11</td>\n",
+       "      <td>4,96E+11</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7,62702E+14</td>\n",
+       "      <td>762701550509617_678920137770716</td>\n",
+       "      <td>https://www.facebook.com/562559642740100/posts...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Date                     Profile  \\\n",
+       "0  12/31/23 9:40 PM  Wild Adventures Theme Park   \n",
+       "1  12/31/23 8:01 PM            Fun Spot America   \n",
+       "2  12/31/23 7:30 PM            Fun Spot America   \n",
+       "3  12/31/23 7:00 PM            Disneyland Paris   \n",
+       "4  12/31/23 7:00 PM       Silverwood Theme Park   \n",
+       "\n",
+       "                                             Message  Number of Reactions  \\\n",
+       "0  🎟️🚨 Today's the FINAL day to use your 2023 Sea...                 16.0   \n",
+       "1  See you next year! 😉                Don’t miss...                 38.0   \n",
+       "2  Don't miss our HUGE firework display ! 🥳\\n\\n#f...                 23.0   \n",
+       "3     Fijne jaarwisseling! 🥂🎉\\nEn tot volgend jaar 😉                646.0   \n",
+       "4  It's the last day of our New Year's Sale! Save...                 17.0   \n",
+       "\n",
+       "   Number of Shares  Number of Comments (primary)  Number of Shares.1  \\\n",
+       "0               NaN                           2.0                 2.0   \n",
+       "1               NaN                           1.0                 2.0   \n",
+       "2               NaN                           2.0                 3.0   \n",
+       "3               NaN                          52.0                12.0   \n",
+       "4               NaN                           2.0                 0.0   \n",
+       "\n",
+       "   Comments per post  Comments on posts by fans Post interaction rate  \\\n",
+       "0                2.0                        2.0              1,09E+12   \n",
+       "1                1.0                        1.0              4,17E+11   \n",
+       "2                2.0                        2.0              2,85E+11   \n",
+       "3               56.0                       56.0              1,36E+11   \n",
+       "4                2.0                        2.0              4,96E+11   \n",
+       "\n",
+       "  Engagement  Number of Likes  Link-posts  Picture Posts  Video-posts  \\\n",
+       "0   1,09E+12             13.0         NaN            1.0          NaN   \n",
+       "1   4,17E+11             33.0         NaN            NaN          NaN   \n",
+       "2   2,85E+11             21.0         NaN            NaN          1.0   \n",
+       "3   1,36E+11            478.0         NaN            1.0          NaN   \n",
+       "4   4,96E+11             16.0         NaN            NaN          1.0   \n",
+       "\n",
+       "    Profile-ID                          Post-ID  \\\n",
+       "0  84679583132      84679583132_770120045161180   \n",
+       "1   1,8402E+11     184020466977_767286052104076   \n",
+       "2   1,8402E+11     184020466977_767267948772553   \n",
+       "3  6,52389E+14  652389081615295_775974521237956   \n",
+       "4  7,62702E+14  762701550509617_678920137770716   \n",
+       "\n",
+       "                                                Link  \n",
+       "0  https://www.facebook.com/617429960430190/posts...  \n",
+       "1  https://www.facebook.com/653224623510220/posts...  \n",
+       "2  https://www.facebook.com/653224623510220/posts...  \n",
+       "3  https://www.facebook.com/724434559725286/posts...  \n",
+       "4  https://www.facebook.com/562559642740100/posts...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -73,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +314,87 @@
    "source": [
     "# Display the DataFrame's information, including index dtype and columns, non-null values, and memory usage\n",
     "print(merged_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                          Profile        Profile-ID\n",
+      "0                      Wild Adventures Theme Park       84679583132\n",
+      "1                                Fun Spot America        1,8402E+11\n",
+      "3                                Disneyland Paris       6,52389E+14\n",
+      "4                           Silverwood Theme Park       7,62702E+14\n",
+      "5                                    Belmont Park       83231004302\n",
+      "6                                SeaWorld Orlando  1782696285170057\n",
+      "7                             Canada's Wonderland       95469803923\n",
+      "8                              SeaWorld San Diego       4,26112E+14\n",
+      "9                                  Lake Compounce       80018245271\n",
+      "10                        Happy Hollow Park & Zoo       1,32943E+11\n",
+      "12                  Universal Orlando Resort (US)       90867402851\n",
+      "13                        Busch Gardens Tampa Bay       68181225238\n",
+      "14                                    Hersheypark       16994689356\n",
+      "15                                 Gilroy Gardens       1,22944E+14\n",
+      "16                                  Sea Life Park       1,05016E+14\n",
+      "17                            LEGOLAND California       1,43631E+14\n",
+      "19                                 Elitch Gardens       62242807350\n",
+      "20                      Six Flags Great Adventure       69421318512\n",
+      "21                                   Pacific Park       61119627598\n",
+      "23                     Busch Gardens Williamsburg       18543728314\n",
+      "24                     Santa Cruz Beach Boardwalk       40035168377\n",
+      "25                                   Kings Island       1,55894E+11\n",
+      "26                                       SeaWorld       63617892564\n",
+      "27                    Six Flags Discovery Kingdom       59636827742\n",
+      "28                Enchanted Island Amusement Park       1,20659E+14\n",
+      "30                   Quassy Amusement & Waterpark       38328744398\n",
+      "32                         Sesame Place San Diego       1,16947E+14\n",
+      "33                  Walt Disney Animation Studios       23245476854\n",
+      "37                             Knott's Berry Farm       10286130875\n",
+      "39                             West Edmonton Mall       2,07299E+11\n",
+      "40                                    Cedar Point       10625691462\n",
+      "43                                 Waterville USA       1,38319E+11\n",
+      "49                                       Playland       1,70866E+14\n",
+      "60      Six Flags Over Georgia & Hurricane Harbor       34284255238\n",
+      "63                     SkyPark at Santa's Village       6,53316E+14\n",
+      "69                                Big Kahuna's NJ       26451078324\n",
+      "72                                      Six Flags        8696281132\n",
+      "78                     California's Great America       28442453154\n",
+      "86                Glenwood Caverns Adventure Park       58441077768\n",
+      "90                       Six Flags Magic Mountain       67502107124\n",
+      "108   Six Flags Great Escape and Hurricane Harbor       51613191805\n",
+      "117                                    Disneyland       11081890741\n",
+      "119                            Castles & Coasters       2,52289E+14\n",
+      "143               ACN - America's Coaster Network       1,11079E+11\n",
+      "180                                Adventure City       1,55862E+14\n",
+      "198                             Walt Disney World       1,55669E+11\n",
+      "211                                    MarineLand       1,08249E+14\n",
+      "216                      Walt Disney Studios (US)       1,11383E+14\n",
+      "218      Six Flags Great America/Hurricane Harbor       10583866355\n",
+      "230                         Six Flags Darien Lake        9596249636\n",
+      "231                Hurricane Harbor Oklahoma City       87241076807\n",
+      "245         Santa's Workshop North Pole, Colorado       3,44217E+11\n",
+      "284                    Centreville Amusement Park       1,17784E+14\n",
+      "337                                  Calaway Park       72446805248\n",
+      "345                                 Playland Park        8119908863\n",
+      "651                   Universal Studios Hollywood       61784580148\n",
+      "789                                   Lake Winnie       1,12097E+11\n",
+      "3734                       Funland Rehoboth Beach       1,38718E+14\n",
+      "5134                             SeaWorld Orlando        1,7827E+15\n",
+      "8380                           Castles N Coasters        1,0375E+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming your DataFrame is named df\n",
+    "unique_profiles = merged_df.drop_duplicates(subset=['Profile-ID'])\n",
+    "\n",
+    "# Print the unique profiles\n",
+    "print(unique_profiles[['Profile', 'Profile-ID']])"
    ]
   },
   {
@@ -192,7 +475,7 @@
    ],
    "source": [
     "# Counts of unique values for a specific column\n",
-    "merged_df['Profile'].value_counts()\n"
+    "merged_df['Profile'].value_counts()"
    ]
   },
   {
@@ -1171,7 +1454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
